# xaviervxz.github.io

./: .gitignore  404.html  CNAME  Pipfile  Pipfile.md  README.md  _config.yml  gen_doc_stubs.py  index.html  misc_macros.py  mkdocs.yml  provisional_head.html
SUMMARY/: index.html
_includes/head/: custom.html
_layouts/: default.html
_pages/: about.md
_posts/: 2019-04-18-welcome-to-jekyll.md  2024-12-02-attempting-to-add-nutshells.md  2024-12-02-sword-of-my-fathers.md  2024-12-04-bsky-block-interest.md
contact/: index.html
debug/: SUMMARY.md  nav.json  url_to_nav.json
debug/docs/: index.md
docs/: contact.md  index.md
docs/general/: about.md  index.md
docs/policies/: budget.md  draft.md  education.md  index.md
docs/posts/: 2024-12-01-a.md  2024-12-02-nutshell-experiment.md  2024-12-04-there-is-nothing-there  index.md
docs/site-pages/: about.md  index.md
docs/x_projects/: index.md
docs/x_recomendations/: index.md  specific-posts.md
general/: index.html
general/404/: index.html
general/about/: index.html
general/category-archive/: index.html
general/tag-archive/: index.html
general/year-archive/: index.html
policies/: index.html
policies/budget/: index.html
policies/construction/: index.html
policies/draft/: index.html
posts/: index.html
resources/: Sense Atlas.xht  Sense Atlas.xht:Zone.Identifier
search/: search_index.json
site-pages/: index.html
x_projects/: index.html
x_projects/soph_code/: index.html  pyproject.toml
x_reccomendations/: index.html
x_recomendations/: index.html  rss-no-nsfw-20250823.opml
(+88 files in other folders)
